--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -12,7 +12,6 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - name: pulling git repo
       - uses: actions/checkout@v3
       - name: say hi to ankit
-      - uses: echo "hello ankit"
+        run: echo "hello ankit"
